tests/ui/proc-macro/signature-proc-macro-derive.stderr
error: mismatched derive proc macro signature
  --> $DIR/signature-proc-macro-derive.rs:7:25
   |
LL | pub fn bad_input(input: String) -> TokenStream {
   |                         ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: derive proc macros must have a signature of `fn(TokenStream) -> TokenStream`

error: mismatched derive proc macro signature
  --> $DIR/signature-proc-macro-derive.rs:13:42
   |
LL | pub fn bad_output(input: TokenStream) -> String {
   |                                          ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: derive proc macros must have a signature of `fn(TokenStream) -> TokenStream`

error: mismatched derive proc macro signature
  --> $DIR/signature-proc-macro-derive.rs:19:41
   |
LL | pub fn bad_everything(input: String) -> String {
   |                                         ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: derive proc macros must have a signature of `fn(TokenStream) -> TokenStream`

error: mismatched derive proc macro signature
  --> $DIR/signature-proc-macro-derive.rs:19:30
   |
LL | pub fn bad_everything(input: String) -> String {
   |                              ^^^^^^ found std::string::String, expected type `proc_macro::TokenStream`
   |
   = note: derive proc macros must have a signature of `fn(TokenStream) -> TokenStream`

error: mismatched derive proc macro signature
  --> $DIR/signature-proc-macro-derive.rs:26:33
   |
LL | pub fn too_many(a: TokenStream, b: TokenStream, c: String) -> TokenStream {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^ found unexpected arguments

error: aborting due to 5 previous errors

